# nanogpt-Audio

./: .gitignore  README.md  generate_sample_audio.py  prepare_input_audio.py  prepare_tokens.py  pyproject.toml
config/: train_shakespeare_audio.py
data/shakespeare_audio/: meta.pkl
