[project]
name = "nanoaudiogpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.4.2",
    "encodec>=0.1.1",
    "numpy>=2.4.0",
    "scipy>=1.16.3",
    "soundfile>=0.13.1",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "wandb>=0.23.1",
]
